syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option go_package = "pkg/proto/v1/passwordspb";

package passwords.v1;

service PasswordsVault {
  rpc AddPassword(AddPasswordRequest) returns (google.protobuf.Empty);
  rpc GetPassword(GetPasswordRequest) returns (Password);
  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty);
  rpc IndexPasswords(google.protobuf.Empty) returns (IndexPasswordsResponse);
  rpc DeletePassword(DeletePasswordRequest) returns (google.protobuf.Empty);
}

message Password {
  string name = 1;
  // The field will contain password details in the format login:password.
  string data = 2;
  optional string notes = 3;
}

message AddPasswordRequest {
  Password password = 1;
}

message GetPasswordRequest {
  string name = 1;
}

message UpdatePasswordRequest {
  string name = 1;

  // The Password resource which replaces the resource on the server.
  message Password {
    optional string name = 1;
    optional string login = 2;
    optional string password = 3;
    optional bytes notes = 4;
  }
  Password password = 2;

  google.protobuf.FieldMask update_mask = 3;
}

message IndexPasswordsResponse {
  repeated string name = 1;
}

message DeletePasswordRequest {
  string name = 1;
  string login = 2;
}